Updated Project Section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
             <ul class="actions">
               <li><a href="#one" class="button scrolly">Portfolio</a></li>
               <li>
-                <a href="" download="" class="button scrolly">Resume</a>
+                <a
+                  href="./images/Patrick Gip Resume.pdf"
+                  download="Gip_Patrick_Resume"
+                  class="button scrolly"
+                  >Resume</a
+                >
               </li>
             </ul>
           </div>
@@ -99,6 +104,27 @@
           </div>
         </section>
         <section>
+          <!-- Project information -->
+          <a href="" class="image"
+            ><img src="./images/Otoify1.png" alt="" data-position="25% 25%"
+          /></a>
+          <div class="content">
+            <div class="inner">
+              <h2>Otoify - Spotify Clone</h2>
+              <p>
+                Otoify is a Spotify clone built using Next.js and TailwindCSS.
+                Users can log in with their Spotify Premium account and view the
+                playlists, artists, and albums followed by them.
+              </p>
+              <a
+                href="https://github.com/patrickgip94/Spotify-Clone"
+                class="button scrolly"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </section>
+        <section>
           <a
             href="https://github.com/patrickgip94/mikasa-projtect.io"
             class="image"
@@ -118,30 +144,6 @@
                 class="button scrolly"
                 >Github Link</a
               >
-              <!-- <ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul> -->
-            </div>
-          </div>
-        </section>
-        <section>
-          <!-- Project information -->
-          <!-- <a href="" class="image"
-            ><img src="" alt="" data-position="25% 25%"
-          /></a> -->
-          <div class="content">
-            <div class="inner">
-              <h2>Project Name goes here</h2>
-              <p>Project information goes here</p>
-              <!-- Github link goes here -->
-              <!-- <a
-                href=""
-                class="button scrolly"
-                >Github Link</a
-              > -->
-              <!-- <ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul> -->
             </div>
           </div>
         </section>
