--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
           </div>
         </section>
         <section>
-          <a
-            href="https://github.com/patrickgip94/mikasa-projtect.io"
-            class="image"
-            ><img src="./images/Mikasa1.png" alt="" data-position="top center"
+          <a href="https://github.com/patrickgip94/Soccer-Pong" class="image"
+            ><img
+              src="./images/SoccerPong1.png"
+              alt=""
+              data-position="top center"
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Mikasa</h2>
+              <h2>Soccer Pong</h2>
               <p>
-                Mikasa is a single-page, full stack web application inspired by
-                Airbnb. Giving users the ability to view, book, and search for
-                listings by location. It utilizes Next.js, TailwindCSS,
-                TypeScript, React.js, and HeroIcons.
+                Soccer Pong is a ping pong clone that was created using React
+                Native. It functions exactly like the classic ping pong game
+                that we all grew up with.
               </p>
               <a
-                href="https://github.com/patrickgip94/mikasa-projtect.io"
+                href="https://github.com/patrickgip94/Soccer-Pong"
                 class="button scrolly"
                 >Github Link</a
               >
