--- a/index.html
+++ b/index.html
@@ -104,6 +104,29 @@
           </div>
         </section>
         <section>
+          <a href="https://github.com/patrickgip94/Discord-Clone" class="image"
+            ><img src="./images/Displug.png" alt="" data-position="top center"
+          /></a>
+          <div class="content">
+            <div class="inner">
+              <h2>Displug</h2>
+              <p>
+                Displug is a Discord clone that functions exactly like Discord.
+                It features realtime chat, file sharing, server creation, and
+                many more. It was built using React along with Redux to power
+                the frontend and managed with Firebase for the backend that is
+                used for authentication and firestore to store messages, users,
+                and servers.
+              </p>
+              <a
+                href="https://github.com/patrickgip94/Discord-Clone"
+                class="button scrolly"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </section>
+        <section>
           <!-- Project information -->
           <a href="" class="image"
             ><img src="./images/Otoify1.png" alt="" data-position="25% 25%"
@@ -118,29 +141,6 @@
               </p>
               <a
                 href="https://github.com/patrickgip94/Spotify-Clone"
-                class="button scrolly"
-                >Github Link</a
-              >
-            </div>
-          </div>
-        </section>
-        <section>
-          <a href="https://github.com/patrickgip94/Soccer-Pong" class="image"
-            ><img
-              src="./images/SoccerPong1.png"
-              alt=""
-              data-position="top center"
-          /></a>
-          <div class="content">
-            <div class="inner">
-              <h2>Soccer Pong</h2>
-              <p>
-                Soccer Pong is a ping pong clone that was created using React
-                Native. It functions exactly like the classic ping pong game
-                that we all grew up with.
-              </p>
-              <a
-                href="https://github.com/patrickgip94/Soccer-Pong"
                 class="button scrolly"
                 >Github Link</a
               >
