updated Portfolio project

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
         <section>
           <a href="https://github.com/patrickgip94/Discord-Clone" class="image"
-            ><img src="./images/Displug.png" alt="" data-position="top center"
+            ><img src="./images/wumpus.png" alt="" data-position="top center"
           /></a>
           <div class="content">
             <div class="inner">
@@ -133,7 +133,7 @@
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Otoify - Spotify Clone</h2>
+              <h2>Otoify</h2>
               <p>
                 Otoify is a Spotify clone built using Next.js and TailwindCSS.
                 Users can log in with their Spotify Premium account and view the
